# z3k

./: .gitignore  CMakeLists.txt  README.md  inference.cpp
tests/test/: constraints  sorts  subsorts  variables
tests/test2/: constraints  sorts  subsorts  syntacticSubsorts  variables
tests/test3/: .constraints.swp  .sorts.swp  constraints  sorts  subsorts  syntacticSubsorts  variables
